# Sentinel

./: .gitignore  ANALYSIS_SUMMARY.txt  DOCS_ANALYSIS.md  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTIVE_SUMMARY.md  MIGRATION_GUIDE.md  README.md  SEPARATION_NEXT_STEPS.md  Sentinel_Roadmap.md  Sentinel_Roadmap_v2.md  Sentinel_improvements.md  Sentinel_proposal_v2.md  Sentinel_propsal.md  VISUAL_COMPARISON.md  docker-compose.yml  pyproject.toml  starter.sh
Docs/: README.md
